# AandDS

./: .gitignore  CMakeLists.txt  README.md
HW01/: CMakeLists.txt  README.md  main.cpp
HW01/fast_power/: CMakeLists.txt  fast_power.cpp  fast_power.hpp  test.cpp  tests_power
HW01/fibbonachi_logn/: CMakeLists.txt  fibbonchi_logn.cpp  fibbonchi_logn.hpp  test.cpp  tests_fibbonachi
MOD_1/: CMakeLists.txt  script_A  script_A.cpp  script_B  script_B.cpp
MOD_1/A/: script_A.cpp
MOD_1/B/: CMakeLists.txt  script_B.cpp
MOD_1/B/_build/: CMakeCache.txt  ScripB
lab01/: README.md
scripts/: valgrind.sh
